Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -1885,6 +1885,12 @@ See also:
      <img style="vertical-align:middle"
           src="pictures/open_access_external_link_10x14.png"
           alt="open access/external link"
+          title="open access/external link">
+     <a href="https://doi.org/10.15094/00003000">DOI</a>
+     |
+     <img style="vertical-align:middle"
+          src="pictures/open_access_external_link_10x14.png"
+          alt="open access/external link"
           title="open access/external link"> 
      <a href="https://hdl.handle.net/2115/29659">HUSCAP</a></dd>
 
@@ -3732,7 +3738,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2024-12-16
+<p align="right">&nbsp;<br>Last modified: 2025-03-03
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
