--- a/papers/2000s/06/Greve_etal_2006_PMG.html
+++ b/papers/2000s/06/Greve_etal_2006_PMG.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 
-<HTML>
+<html>
 
-<HEAD>
+<head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <META NAME="author" CONTENT="Ralf Greve">
+  <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index,follow">
-  <TITLE>Greve and others (2006)</TITLE>
+  <title>Greve and others (2006)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
-</HEAD>
+</head>
 
-<BODY>
+<body>
 
 <p><img src="../../../pictures/spacer_transparent_1x1.gif"
         alt="Spacer" width="1" height="10"></p>
@@ -22,39 +22,27 @@
        bgcolor="#ffffff" width=750>
 <tr><td>
 
-<H2 style="margin-top:0px; color:#000000;">
-Simulation of large-scale ice-sheet surges: The ISMIP HEINO experiments</H2>
+<h2 style="margin-top:0px; color:#000000;">
+Simulation of large-scale ice-sheet surges: The ISMIP HEINO experiments</h2>
 
-<P>R. GREVE, R. TAKAHAMA and R. CALOV</P>
-
-<hr>
-
-<H4 style="color:#000000;">Abstract</H4>
-
-<P>The three-dimensional, dynamic/thermodynamic ice-sheet model
-SICOPOLIS (SImulation COde for POLythermal Ice Sheets) is applied to
-the ISMIP HEINO (Ice Sheet Model Intercomparison Project - Heinrich
-Event INtercOmparison) set-up. ISMIP HEINO has been designed to
-study large-scale ice-sheet instabilities, similar to those of the
-Laurentide ice sheet which are the cause of Heinrich events, on a
-simplified geometry which consists of a flat square with 4000&nbsp;km
-side length. This square contains an area which resembles Hudson Bay
-and Hudson Strait, on which rapid sediment sliding can occur. The
-ice sheet is built up over 200&nbsp;ka by assuming a temporally constant
-glacial climate. For the standard set-up of ISMIP HEINO, we obtain
-an oscillatory behaviour of the ice sheet with a main period of
-approx. 7.5&nbsp;ka. One cycle consists of a gradual growth phase,
-followed by a massive surge through "Hudson Bay" and "Hudson
-Strait" owing to rapid sediment sliding on a molten bed. The
-occurrence of internal oscillations is robust against moderate
-variations of the surface boundary conditions and the strength of
-the sediment sliding. These findings support the idea of a free
-oscillatory mechanism as the main cause for large-scale ice-sheet
-surges.</P>
+<p>R. Greve, R. Takahama and R. Calov</p>
 
 <hr>
 
-<P><I>Polar Meteorology and Glaciology</I> <B>20</B>, 1-15 (2006).</P>
+<h4 style="color:#000000;">Abstract</h4>
+
+<p>The three-dimensional, dynamic/thermodynamic ice-sheet model SICOPOLIS (SImulation COde for POLythermal Ice Sheets) is applied to the ISMIP HEINO (Ice Sheet Model Intercomparison Project - Heinrich Event INtercOmparison) set-up. ISMIP HEINO has been designed to study large-scale ice-sheet instabilities, similar to those of the Laurentide ice sheet which are the cause of Heinrich events, on a simplified geometry which consists of a flat square with 4000&nbsp;km side length. This square contains an area which resembles Hudson Bay and Hudson Strait, on which rapid sediment sliding can occur. The ice sheet is built up over 200&nbsp;ka by assuming a temporally constant glacial climate. For the standard set-up of ISMIP HEINO, we obtain an oscillatory behaviour of the ice sheet with a main period of approx. 7.5&nbsp;ka. One cycle consists of a gradual growth phase, followed by a massive surge through "Hudson Bay" and "Hudson Strait" owing to rapid sediment sliding on a molten bed. The occurrence of internal oscillations is robust against moderate variations of the surface boundary conditions and the strength of the sediment sliding. These findings support the idea of a free oscillatory mechanism as the main cause for large-scale ice-sheet surges.</p>
+
+<hr>
+
+<p><i>Polar Meteorology and Glaciology</i> <b>20</b>, 1-15 (2006).
+   &nbsp;
+   <img style="vertical-align:middle"
+        src="../../../pictures/open_access_external_link_10x14.png"
+        alt="open access/external link"
+        title="open access/external link">
+   <a href="https://doi.org/10.15094/00003000">DOI</a>
+</p>
 
 </td></tr>
 </table>
@@ -63,11 +51,11 @@ surges.</P>
        width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2008-09-05</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2025-03-03</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
 
-</BODY>
+</body>
 
-</HTML>
+</html>
