Poster resources site updated.

--- a/resources/posters/Greve_2025_ArCSII_P2_16/index.html
+++ b/resources/posters/Greve_2025_ArCSII_P2_16/index.html
@@ -17,10 +17,11 @@
 
 <hr>
 
-<h1 style="text-align:left">Resources for poster P2_16 (ArCS II Final Symposium)
-</h1>
+<h1 style="text-align:left">Resources for poster P2_16</h1>
 
 <h2 style="text-align:left;color:black">Simulating the fate of the Earth's ice sheets in a warming world</h2>
+
+<h3 style="text-align:left;color:black">ArCS II Final Symposium, NIPR, Tachikawa, Tokyo, 2025-03-14</h3>
 
 <p>presented by Ralf Greve
 <br>
@@ -28,6 +29,11 @@
 </p>
 
 <hr>
+
+<h3 style="text-align:left">Poster (PDF A4 size)</h3>
+
+<p>&nbsp;&nbsp;&nbsp;
+<a href="./P2_16_Greve_A4size.pdf"><img src="./P2_16_Greve_thumb.png" width="150" align="middle" alt="Poster" style="border:10px solid transparent"></a></p>
 
 <h3 style="text-align:left">Collaborators</h3>
 
@@ -182,7 +188,7 @@ Potsdam Institute for Climate Impact Research (PIK Potsdam), Germany
 
 <p>Go to: [<a href="../../../index.html">Ralf Greve's Homepage</a>]</p>
 
-<p align="right">&nbsp;<br>Last modified: 2025-02-07
+<p align="right">&nbsp;<br>Last modified: 2025-03-12
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </body>
