--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 <b>Fundamental Course in Cold Region Sciences</b>
 <br>
 &nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=xxxxxx"
-    target="new">HU ELMS/Moodle</a> (account required) &rarr; coming soon]
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=10881"
+    target="new">HU ELMS/Moodle</a> (account required)]
 </li>
 
 <li> Second semester 2024:
@@ -138,7 +138,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-02-19
+<p align="right">&nbsp;<br>Last modified: 2025-03-25
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
