Publication list updated.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@ Welcome to my "icy" homepage!</p>
                 
 <p>For further details, please have a look at my <a href="https://researchmap.jp/greve">profile at Researchmap</a> (bilingual English/Japanese) or my <a href="./cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
 
+<p align="center">See also: 
+&nbsp;<img src="pictures/external_link_10x10.png"
+     alt="external link" title="external link">
+<a href="https://orcid.org/0000-0002-1341-4777">ORCID</a>
+&nbsp;<img src="pictures/external_link_10x10.png"
+     alt="external link" title="external link">
+<a href="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ">Google Scholar</a>
+&nbsp;<img src="pictures/external_link_10x10.png"
+     alt="external link" title="external link">
+<a href="https://www.webofscience.com/wos/author/rid/G-2336-2010">ResearcherID</a>
+&nbsp;<img src="pictures/external_link_10x10.png"
+     alt="external link" title="external link">
+<a href="https://www.scopus.com/authid/detail.uri?authorId=7003672448">Scopus</a></p>
+
 <hr>
 
 <h4>Research projects</h4>
@@ -138,7 +152,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-03-25
+<p align="right">&nbsp;<br>Last modified: 2025-06-26
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
