--- a/publist.html
+++ b/publist.html
@@ -31,20 +31,6 @@
 &nbsp;[<a href="#Book">Books</a>]
 &nbsp;[<a href="#ArtBook">Articles in books</a>]
 &nbsp;[<a href="#Other">Other publications</a>]
-<br>
-See also: 
-&nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
-<a href="https://www.webofscience.com/wos/author/rid/G-2336-2010">ResearcherID</a>
-&nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
-<a href="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ">Google Scholar</a>
-&nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
-<a href="https://www.scopus.com/authid/detail.uri?authorId=7003672448">Scopus</a>
-&nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
-<a href="https://orcid.org/0000-0002-1341-4777">ORCID</a>
 </p>
 
 <hr>
@@ -56,6 +42,15 @@ See also:
 <h3>Peer-reviewed journal articles:</h3>
 
 <dl>
+
+<dt> <a href="papers/2020s/25/Greve_2025_JoG.html">
+     Greve, R. 2025.</a></dt>
+<dd> On non-dimensional forms of basal sliding laws and flow laws for
+     ice-sheet and glacier modelling.<br>
+     <i>Journal of Glaciology</i> (submitted).<br>
+     <i>Zenodo</i>,
+     <a href="https://doi.org/10.5281/zenodo.15743001">doi:
+     10.5281/zenodo.15743001</a> (preprint).</dd>
 
 <dt> <a href="papers/2020s/24/Seroussi_etal_2024_EF.html">
      Seroussi, H., T. Pelle, W. H. Lipscomb, A. Abe-Ouchi, T. Albrecht,
@@ -3738,7 +3733,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-03-03
+<p align="right">&nbsp;<br>Last modified: 2025-06-26
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
