Short CV updated.

--- a/index.html
+++ b/index.html
@@ -38,20 +38,23 @@ Welcome to my "icy" homepage!</p>
 
 <p>I am a professor at <a href="https://www.hokudai.ac.jp/">Hokkaido University</a>'s <a href="https://www2.lowtem.hokudai.ac.jp/">Institute of Low Temperature Science</a> in Sapporo, Japan. A physicist by training, my main focus is on the evolution, dynamics and thermodynamics of the Earth's ice sheets, using numerical modelling. I am the author/co-author of more than 100 peer-reviewed scientific papers and two textbooks on ice dynamics and continuum mechanics, serve as an Associate Chief Editor for the <a href="https://www.cambridge.org/core/journals/journal-of-glaciology">Journal of Glaciology </a> and maintain the open-source ice-sheet model <a href="https://www.sicopolis.net">SICOPOLIS</a>.</p>
                 
-<p>For further details, please have a look at my <a href="https://researchmap.jp/greve">profile at Researchmap</a> (bilingual English/Japanese) or my <a href="./cv_greve.pdf">curriculum vitae</a> (PDF file).</p>
+<p>For further information, please see my short <a href="./cv_greve.pdf">curriculum vitae</a> (PDF file) or the following resources:</p>
 
-<p align="center">See also: 
-&nbsp;<img src="pictures/external_link_10x10.png"
+<p align="center">
+<img src="pictures/external_link_10x10.png"
      alt="external link" title="external link">
+<a href="https://researchmap.jp/greve">Researchmap</a>
+&nbsp;<img src="pictures/external_link_10x10.png"
+           alt="external link" title="external link">
 <a href="https://orcid.org/0000-0002-1341-4777">ORCID</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
+           alt="external link" title="external link">
 <a href="https://scholar.google.co.jp/citations?user=vd8eO-oAAAAJ">Google Scholar</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
+           alt="external link" title="external link">
 <a href="https://www.webofscience.com/wos/author/rid/G-2336-2010">ResearcherID</a>
 &nbsp;<img src="pictures/external_link_10x10.png"
-     alt="external link" title="external link">
+           alt="external link" title="external link">
 <a href="https://www.scopus.com/authid/detail.uri?authorId=7003672448">Scopus</a></p>
 
 <hr>
@@ -152,7 +155,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-06-26
+<p align="right">&nbsp;<br>Last modified: 2025-06-27
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
