--- a/index.html
+++ b/index.html
@@ -94,30 +94,39 @@ List of projects with me as principal or co-investigator &rarr; <a href="https:/
 
 <ul>
 
+<li> Second semester 2025:
+<br>
+<b>Advanced Course in Theoretical Glaciology</b>
+<br>
+&nbsp;&nbsp;&nbsp;
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=3612"
+    target="new">HU ELMS/Moodle</a> (account required)]
+</li>
+
+<li>Second semester 2025:
+<br>
+<b>Advanced Course on International Science Communication Methods</b>
+<br>
+&nbsp;&nbsp;&nbsp;
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=3632"
+    target="new">HU ELMS/Moodle</a> (account required)]
+</li>
+
+<li>First semester 2025:
+<br>
+<b>Special Course on Arctic and Antarctic Sciences II</b>
+<br>
+&nbsp;&nbsp;&nbsp;
+[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=5170"
+    target="new">HU ELMS/Moodle</a> (account required)]
+</li>
+
 <li>First semester 2025:
 <br>
 <b>Fundamental Course in Cold Region Sciences</b>
 <br>
 &nbsp;&nbsp;&nbsp;
 [<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=10881"
-    target="new">HU ELMS/Moodle</a> (account required)]
-</li>
-
-<li> Second semester 2024:
-<br>
-<b>Advanced Course in Theoretical Glaciology</b>
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136777"
-    target="new">HU ELMS/Moodle</a> (account required)]
-</li>
-
-<li>Second semester 2024:
-<br>
-<b>Advanced Course in International Science Communication Methods</b>
-<br>
-&nbsp;&nbsp;&nbsp;
-[<a href="https://moodle.elms.hokudai.ac.jp/course/view.php?id=136730"
     target="new">HU ELMS/Moodle</a> (account required)]
 </li>
 
@@ -155,7 +164,7 @@ Information about the <a href="https://www2.lowtem.hokudai.ac.jp/gisg/en/rironne
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-06-27
+<p align="right">&nbsp;<br>Last modified: 2025-09-22
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
