Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -43,6 +43,23 @@
 
 <dl>
 
+<dt> <a href="papers/2020s/25/Beckmann_etal_2025_TC.html">
+     Beckmann, J., R. Reese, F. S. McCormack, S. Cook, L. Bird, D. Gwyther,
+     D. Richards, M. Scheiter, Y. Wang, H. Seroussi, A. Abe-Ouchi, T. Albrecht,
+     J. Alvarez-Solas, X. S. Asay‐Davis, J.‐B. Barre, C. J. Berends,
+     J. Bernales, J. Blasco, J. Caillet, D. M. Chandler, V. Coulon,
+     R. Cullather, C. Dumas, B. K. Galton‐Fenzi, J. Garbe, F. Gillet‐Chaulet,
+     R. Gladstone, H. Goelzer, N. R. Golledge, R. Greve, G. H. Gudmundsson,
+     H. K. Han, T. R. Hillebrand, M. J. Hoffman, P. Huybrechts, N. C. Jourdain,
+     A. K. Klose, P. M. Langebroek, G. R. Leguy, W. H. Lipscomb, D. P. Lowry,
+     P. Mathiot, M. Montoya, M. Morlighem, S. Nowicki, F. Pattyn, A. J. Payne,
+     T. Pelle, A. Quiquet, A. Robinson, L. Saraste, E. G. Simon, S. Sun,
+     J. P. Twarog, L. D. Trusel, B. Urruty, J. Van Breedam,
+     R. S. W. van de Wal, C. Zhao and T. Zwinger.</a></dt>
+<dd> Disentangling uncertainty in ISMIP6 Antarctic sub-shelf melting and
+     2300 sea level rise projections.<br>
+     <i>The Cryosphere</i> (submitted).</dd>
+
 <dt> <a href="papers/2020s/25/Greve_2025_JoG.html">
      Greve, R. 2025.</a></dt>
 <dd> On non-dimensional forms of basal sliding laws and flow laws for
@@ -51,6 +68,12 @@
      <i>Zenodo</i>,
      <a href="https://doi.org/10.5281/zenodo.15743001">doi:
      10.5281/zenodo.15743001</a> (preprint).</dd>
+
+<dt> <a href="papers/2020s/25/Schaefer_etal_2025_TC.html">
+     Schaefer, M., I. Tabone, R. Greve, J. F&uuml;rst and M. Braun.</a></dt>
+<dd> Projecting the evolution of the Northern Patagonian Icefield until the
+     year 2200.<br>
+     <i>The Cryosphere</i> (submitted).</dd>
 
 <dt> <a href="papers/2020s/24/Seroussi_etal_2024_EF.html">
      Seroussi, H., T. Pelle, W. H. Lipscomb, A. Abe-Ouchi, T. Albrecht,
@@ -3733,7 +3756,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-06-26
+<p align="right">&nbsp;<br>Last modified: 2025-09-25
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
