Publication list updated.

--- a/publist.html
+++ b/publist.html
@@ -55,7 +55,7 @@
      P. Mathiot, M. Montoya, M. Morlighem, S. Nowicki, F. Pattyn, A. J. Payne,
      T. Pelle, A. Quiquet, A. Robinson, L. Saraste, E. G. Simon, S. Sun,
      J. P. Twarog, L. D. Trusel, B. Urruty, J. Van Breedam,
-     R. S. W. van de Wal, C. Zhao and T. Zwinger.</a></dt>
+     R. S. W. van de Wal, C. Zhao and T. Zwinger. 2025.</a></dt>
 <dd> Disentangling uncertainty in ISMIP6 Antarctic sub-shelf melting and
      2300 sea level rise projections.<br>
      <i>The Cryosphere</i> (submitted).</dd>
@@ -70,7 +70,8 @@
      10.5281/zenodo.15743001</a> (preprint).</dd>
 
 <dt> <a href="papers/2020s/25/Schaefer_etal_2025_TC.html">
-     Schaefer, M., I. Tabone, R. Greve, J. F&uuml;rst and M. Braun.</a></dt>
+     Schaefer, M., I. Tabone, R. Greve, J. F&uuml;rst and M. Braun.
+     2025.</a></dt>
 <dd> Projecting the evolution of the Northern Patagonian Icefield until the
      year 2200.<br>
      <i>The Cryosphere</i> (submitted).</dd>
@@ -3756,7 +3757,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-09-25
+<p align="right">&nbsp;<br>Last modified: 2025-09-26
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
