Publication list updated.

--- a/papers/2020s/25/Schaefer_etal_2025_TC.html
+++ b/papers/2020s/25/Schaefer_etal_2025_TC.html
@@ -41,8 +41,8 @@ Projecting the evolution of the Northern Patagonian Icefield until the year
 <hr>
 
 <p><i>The Cryosphere</i> (submitted).
-<!-- <i>EGUsphere</i>, <a href="https://doi.org/10.5194/egusphere-2025-xxxx">doi:
-10.5194/egusphere-2025-xxxx</a> (preprint). -->
+<i>EGUsphere</i>, <a href="https://doi.org/10.5194/egusphere-2025-4167">doi:
+10.5194/egusphere-2025-4167</a> (preprint).
 </p>
 
 </td></tr>
@@ -51,7 +51,7 @@ Projecting the evolution of the Northern Patagonian Icefield until the year
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2025-09-25</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2025-09-30</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
