--- a/publist.html
+++ b/publist.html
@@ -74,7 +74,10 @@
      2025.</a></dt>
 <dd> Projecting the evolution of the Northern Patagonian Icefield until the
      year 2200.<br>
-     <i>The Cryosphere</i> (submitted).</dd>
+     <i>The Cryosphere</i> (submitted).<br>
+     <i>EGUsphere</i>,
+     <a href="https://doi.org/10.5194/egusphere-2025-4167">doi:
+     10.5194/egusphere-2025-4167</a> (preprint).</dd>
 
 <dt> <a href="papers/2020s/24/Seroussi_etal_2024_EF.html">
      Seroussi, H., T. Pelle, W. H. Lipscomb, A. Abe-Ouchi, T. Albrecht,
@@ -3757,7 +3760,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-09-26
+<p align="right">&nbsp;<br>Last modified: 2025-09-30
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
