Publication list updated.

--- a/papers/2020s/25/Beckmann_etal_2025_TC.html
+++ b/papers/2020s/25/Beckmann_etal_2025_TC.html
@@ -48,8 +48,8 @@ Disentangling uncertainty in ISMIP6 Antarctic sub-shelf melting and
 <hr>
 
 <p><i>The Cryosphere</i> (submitted).
-<!-- <i>EGUsphere</i>, <a href="https://doi.org/10.5194/egusphere-2025-xxxx">doi:
-10.5194/egusphere-2025-xxxx</a> (preprint). -->
+<i>EGUsphere</i>, <a href="https://doi.org/10.5194/egusphere-2025-4069">doi:
+10.5194/egusphere-2025-4069</a> (preprint).
 </p>
 
 </td></tr>
@@ -58,7 +58,7 @@ Disentangling uncertainty in ISMIP6 Antarctic sub-shelf melting and
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2025-09-25</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2025-10-14</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
