--- a/publist.html
+++ b/publist.html
@@ -58,7 +58,10 @@
      R. S. W. van de Wal, C. Zhao and T. Zwinger. 2025.</a></dt>
 <dd> Disentangling uncertainty in ISMIP6 Antarctic sub-shelf melting and
      2300 sea level rise projections.<br>
-     <i>The Cryosphere</i> (submitted).</dd>
+     <i>The Cryosphere</i> (submitted).<br>
+     <i>EGUsphere</i>,
+     <a href="https://doi.org/10.5194/egusphere-2025-4069">doi:
+     10.5194/egusphere-2025-4069</a> (preprint).</dd>
 
 <dt> <a href="papers/2020s/25/Greve_2025_JoG.html">
      Greve, R. 2025.</a></dt>
@@ -3760,7 +3763,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-09-30
+<p align="right">&nbsp;<br>Last modified: 2025-10-14
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
