Publication list updated.

--- a/papers/2020s/25/Greve_2025_JoG.html
+++ b/papers/2020s/25/Greve_2025_JoG.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ralf Greve">
   <meta name="content-language" content="en">
   <meta name="robots" content="index, follow">
-  <title>Greve (submitted)</title>
+  <title>Greve (in press)</title>
   <link href="../../../styles/ralf_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -31,11 +31,11 @@ On non-dimensional forms of basal sliding laws and flow laws for ice-sheet and g
 
 <h4 style="color:#000000;">Abstract</h4>
 
-<p>Ice sheets and glaciers flow through basal sliding and internal deformation, each governed by physical laws commonly expressed as power-law relationships. These formulations include multiplicative coefficients - the sliding coefficient and rate factor - whose values and units depend on the respective exponents. This dependency complicates the systematic exploration of parameter space, especially in ensemble simulations. To address this, we propose dimensionless formulations of both sliding and flow laws, in which the coefficients are of order unity and decoupled from the exponents. This separation simplifies sensitivity studies and parameter variations. The dimensionless laws are straightforward to implement in existing models; we demonstrate this with the SICOPOLIS ice-sheet model using three test simulations in an idealized set-up. These simulations illustrate that independent variation of exponents and coefficients is feasible and practical, supporting the use of dimensionless laws in efforts to better constrain ice dynamics in past and future climate scenarios.</p>
+<p>Ice sheets and glaciers flow through basal sliding and internal deformation, each governed by physical laws commonly expressed as power-law relationships. These formulations include coefficients - the sliding coefficient and rate factor - whose values and units depend on the respective exponents. This dependency complicates the systematic exploration of parameter space, especially in ensemble simulations. To address this, we propose dimensionless formulations of both sliding and flow laws, in which the coefficients are of order unity and decoupled from the exponents. This separation simplifies sensitivity studies and parameter variations. The dimensionless laws are straightforward to implement in existing models; we demonstrate this with the SICOPOLIS ice-sheet model using three test simulations in an idealized set-up. These simulations illustrate that independent variation of exponents and coefficients is feasible and practical, supporting the use of dimensionless laws in efforts to better constrain ice dynamics in past and future climate scenarios.</p>
 
 <hr>
 
-<p><i>Journal of Glaciology</i> (submitted).
+<p><i>Journal of Glaciology</i> (in press).
 <i>Zenodo</i>, <a href="https://doi.org/10.5281/zenodo.15743001">doi:
 10.5281/zenodo.15743001</a> (preprint).
 </p>
@@ -46,7 +46,7 @@ On non-dimensional forms of basal sliding laws and flow laws for ice-sheet and g
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p>&nbsp;<br><i>Last modified: 2025-10-08</i><br>&nbsp;</p>
+<p>&nbsp;<br><i>Last modified: 2025-10-23</i><br>&nbsp;</p>
 
 </td></tr>
 </table>
