--- a/publist.html
+++ b/publist.html
@@ -67,7 +67,7 @@
      Greve, R. 2025.</a></dt>
 <dd> On non-dimensional forms of basal sliding laws and flow laws for
      ice-sheet and glacier modelling.<br>
-     <i>Journal of Glaciology</i> (submitted).<br>
+     <i>Journal of Glaciology</i> (in press).<br>
      <i>Zenodo</i>,
      <a href="https://doi.org/10.5281/zenodo.15743001">doi:
      10.5281/zenodo.15743001</a> (preprint).</dd>
@@ -3763,7 +3763,7 @@ Go to:
 <table align="center" cellpadding="0" cellspacing="0" width=750>
 <tr><td>
 
-<p align="right">&nbsp;<br>Last modified: 2025-10-14
+<p align="right">&nbsp;<br>Last modified: 2025-10-23
 &nbsp;&nbsp;<br>&nbsp;</p>
 
 </td></tr>
